--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 </head>
 <body>
-<a href="index.html" input="button">Click here</a>
+<a href="index.2.html" input="button">Click here</a>
 </body>
 </html>
