--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Paramdeep's resume</title>
-
+	<link type="text/css" rel="stylesheet" href="styling.css"/>
+    <title>Paramdeep's resume</title>
+    <meta charset="UTF-8">
 </head>
 <body>
-<a href="index.2.html" input="button">Click here</a>
+	<div class="container">
+		<h2>Paramdeep's Resume</h2>
+		<hr>
+		<p>Fill your details to see the Resume</p>
+		<form action="home.html" method="POST">
+			<input type="text" name="name" placeholder="Enter your name" required /><br>
+			<input type="email" name="email" placeholder="Enter your valid email" required /><br>
+			<button type="submit">Submit</button>
+		</form>
+	</div>
 </body>
 </html>
