--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h2>Paramdeep's Resume</h2>
 		<hr>
 		<p>Fill your details to see the Resume</p>
-		<form action="home.html" method="POST">
+		<form action="home.html">
 			<input type="text" name="name" placeholder="Enter your name" required /><br>
 			<input type="email" name="email" placeholder="Enter your valid email" required /><br>
 			<button type="submit">Submit</button>
